@@ -1,3 +1,10 @@
+2008-09-29  Gabor Csardi  <csardi@szaffi>
+
+	* src/type_indexededgelist.c (igraph_get_eids) : rewritten to
+	use binary search. In practice it is faster only if we search 
+	for adjacent edges of high-degree vertices frequently
+	* examples/simple/igraph_get_eids.c : added
+
 2008-09-26  Gabor Csardi  <csardi@szaffi>
 
 	* src/basic_query.c (igraph_are_connected) : speeded up by using 
